--- a/zh-CN/700.reference/500.sql-reference/100.sql-syntax/200.common-tenant-of-mysql-mode/400.functions-of-mysql-mode/700.json-functions-of-mysql-mode/90.json-functions-overview-of-mysql-mode.md
+++ b/zh-CN/700.reference/500.sql-reference/100.sql-syntax/200.common-tenant-of-mysql-mode/400.functions-of-mysql-mode/700.json-functions-of-mysql-mode/90.json-functions-overview-of-mysql-mode.md
@@ -1,6 +1,6 @@
 # JSON 函数概述
 
-OceanBase 数据库当前版本所支持的 JSON 函数如下表所示。
+OceanBase 数据库 MySQL 模式下所支持的 JSON 函数如下表所示。
 
 | **函数名称** | **描述** |
 | --- | --- |
