--- a/zh-CN/600.manage/100.cluster-management/300.common-cluster-operations/1500.oceanbase-version-upgrade/100.oceanbase-cluster-version-upgrade/100.upgrade-overview.md
+++ b/zh-CN/600.manage/100.cluster-management/300.common-cluster-operations/1500.oceanbase-version-upgrade/100.oceanbase-cluster-version-upgrade/100.upgrade-overview.md
@@ -45,6 +45,11 @@ OceanBase 集群升级时，有如下限制：
 * 禁止 `switchover/failover`：升级过程中不允许发起备库 `switchover/failover`。
 * 禁止新建租户。
 
+<main id="notice" type='notice'>
+  <h4>注意</h4>
+  <p>如果 OceanBase 集群关联了仲裁服务，那么在进行 OceanBase 集群版本升级时，需要确保先升级仲裁服务版本，然后再升级 OceanBase 集群版本。仲裁服务版本升级的详细信息，请参见 <a href="../200.arbitration-services-version-upgrade.md">仲裁服务版本升级</a>。</br>可以使用系统租户查询视图 <a href="../../../../../700.reference/700.system-views/300.system-view-of-sys-tenant/200.dictionary-view-of-sys-tenant/19600.oceanbase-dba_ob_arbitration_service-of-sys-tenant.md">oceanbase.DBA_OB_ARBITRATION_SERVICE</a> 检查本 OceanBase 集群是否关联仲裁服务。</p>
+</main>
+
 ## 升级影响
 
 OceanBase 集群升级时，可能会有以下影响：
