--- a/zh-CN/600.manage/100.cluster-management/300.common-cluster-operations/1500.oceanbase-version-upgrade/100.oceanbase-cluster-version-upgrade/200.start-upgrade.md
+++ b/zh-CN/600.manage/100.cluster-management/300.common-cluster-operations/1500.oceanbase-version-upgrade/100.oceanbase-cluster-version-upgrade/200.start-upgrade.md
@@ -57,7 +57,9 @@
       * `value`：当值为 `true` 时，和 `when_come_from` 属性联合使用。
       * `when_come_from`：是一个列表，当 `when_come_from` 未定义时，表示任何版本升级到目标版本时，都要先升级到当前 binary 版本；当 `when_come_from` 已定义，表示列表中的版本号升级到目标版本时，需要先升级到当前 binary 版本。例如：示例中的 `4.0.0.0` 和 `4.1.0.0-100000982023031415` 版本的 OceanBase 集群在升级到 V4.2.0.0 版本时，都要先升级到 V4.1.0.1(binary) 版本。
 
-    `oceanbase_upgrade_dep.yml` 文件中 OceanBase 集群各个版本升级依赖关系示例如下：
+    **示例如下：**
+
+    假设 `oceanbase_upgrade_dep.yml` 文件中 OceanBase 集群各个版本升级依赖关系如下：
 
     ```yml
     - version: 4.0.0.0
@@ -81,7 +83,7 @@
         when_come_from: [4.0.0.0, 4.1.0.0-100000982023031415]
     ```
 
-    通过分析示例文件，可以得到以下升级路径：
+    通过分析示例文件，可以得到以下升级序列：
 
     * V4.0.0.0 > V4.1.0.0 > V4.1.0.1(binary) > V4.2.0.0
     * V4.1.0.0-100000982023031415 > V4.1.0.0 > V4.1.0.1(binary) > V4.2.0.0
@@ -90,7 +92,7 @@
 
     <main id="notice" type='notice'>
       <h4>注意</h4>
-      <p>如果升级路径中存在 barrier 版本，那么您还需获取升级路径中所有 barrier 版本的 OceanBase RPM 包。</p>
+      <p>如果升级序列中存在 barrier 版本，那么您还需获取升级路径中所有 barrier 版本的 OceanBase RPM 包。</p>
     </main>
 
 ### 步骤二：确认升级流程
@@ -100,7 +102,7 @@
   <p>如果 OceanBase 集群当前版本和目标版本之间存在 barrier 版本，那么 OceanBase 集群应该先升级到 barrier 版本，然后再从 barrier 版本升级到目标版本。</p>
 </main>
 
-通过 **步骤一** 示例的升级路径，可以得到如下信息：
+通过 **步骤一** 示例的升级序列，可以得到如下信息：
 
 * 如果您当前使用的是 OceanBase 集群 V4.0.0.0 或者 V4.1.0.0-100000982023031415 版本，那么您在升级时 OceanBase 集群应该先升级到 V4.1.0.1（barrier）版本，然后再从 V4.1.0.1（barrier）版本升级到 V4.2.0.0 版本。
 
@@ -108,7 +110,7 @@
 
 **示例如下：**
 
-以下将以 1:1:1 部署模式的 OceanBase 集群为例介绍升级流程。
+以下将以三副本的 OceanBase 集群为例介绍升级流程。
 
 * 当前 OceanBase 集群版本是 V4.0.0.0 版本，升级流程如下：
 
