--- a/zh-CN/700.reference/300.database-object-management/200.manage-object-of-oracle-mode/1000.manage-dblink-of-oracle-mode/300.access-a-remote-database-by-a-dblink-of-oracle-mode.md
+++ b/zh-CN/700.reference/300.database-object-management/200.manage-object-of-oracle-mode/1000.manage-dblink-of-oracle-mode/300.access-a-remote-database-by-a-dblink-of-oracle-mode.md
@@ -1,6 +1,6 @@
 # 通过 DBLink 访问远端数据库中的数据
 
-您可以通过 DBLink 访问远端数据库的对象，对象包括表、视图和同义词等。
+您可以通过 DBLink 访问远端数据库的对象，对象包括表、视图、同义词、序列等。
 
 ## 前提条件
 
@@ -8,7 +8,7 @@
 
 ## 访问远端数据库中表的数据
 
-使用 `SELECT... FROM 表名@DBLink 名` 语法来访问远端数据库中表的数据，SQL 语句如下：
+您可以使用 `SELECT... FROM 表名@DBLink 名` 语法来访问远端数据库中表的数据，SQL 语句如下：
 
 ```sql
 SELECT select_expr_list 
@@ -42,6 +42,95 @@ select_expr_list:
 ```sql
 obclient> SELECT * FROM tbl1@my_link;
 ```
+
+## 访问远端数据库中的序列
+
+OceanBase 数据库从 V4.2.1 版本开始，支持通过 `SELECT` 语句访问远端数据库中的序列。
+
+查询示例如下：
+
+1. 在本地数据库中，创建到远端 OceanBase 数据库的 DBLink `my_link`。
+
+   ```sql
+   obclient> CREATE DATABASE LINK my_link CONNECT TO ob_user@oracle IDENTIFIED BY ****** HOST 'xx.xx.xx.xx:2881';
+   ```
+
+2. 在远端的 OceanBase 数据库中，创建序列 `seq`。
+
+   ```sql
+   CREATE SEQUENCE seq START WITH 10000 INCREMENT BY 1 CACHE 50 NOCYCLE;
+   ```
+
+   有关序列的详细详细操作及说明，请参见 [管理序列](../600.management-sequence-of-oracle-mode.md)。
+
+3. 在本地数据库中，查看序列的当前值和下一个值。
+
+   * 查询当前值
+
+     ```sql
+     SELECT seq.currval@my_link FROM DUAL;
+     ```
+
+     查询结果如下：
+
+     ```shell
+     +---------+
+     | CURRVAL |
+     +---------+
+     |   10000 |
+     +---------+
+     1 row in set
+     ```
+
+   * 查询下一个值
+
+     ```sql
+     SELECT seq.nextval@my_link FROM DUAL;
+     ```
+
+     查询结果如下：
+
+     ```shell
+     +---------+
+     | NEXTVAL |
+     +---------+
+     |   10000 |
+     +---------+
+     1 row in set
+     ```
+
+需要注意的是，在某些特殊场景下，OceanBase 数据库为了提升远端数据库对象查询的性能，可能会导致远端序列的 `CURRVAL` 无法获取到最新的值。例如，以下查询是通过数据库链接 `my_link` 将远端数据库中表 `tbl2` 的 `c1` 列数据与序列 `seq` 的 `NEXTVAL` 值插入到本地数据库的表 `tbl` 中：
+
+```sql
+INSERT INTO  tbl1 SELECT tbl2.c1, seq.nextval@my_link FROM tbl2@my_link;
+```
+
+待数据插入后，再执行以下语句，查看序列的 `CURRVAL` 值，发现并不是最新的 `CURRVAL` 值。这是因为 OceanBase 数据库针对该场景的查询优化了远程对象的访问，会将整个 `SELECT` 部分的语句交给远端执行，而本地仅负责拉取数据及插入数据。
+
+```sql
+SELECT seq.currval@my_link FROM DUAL;
+```
+
+## 调用远端数据库中的存储过程
+
+OceanBase 数据库从 V4.2.1 版本开始，支持通过 DBLink 调用远端数据库中的存储过程。
+
+### 注意事项及使用限制
+
+* 使用 DBLink 功能调用远端 Oracle 数据库上的存储过程时，如果远端数据库版本为 Oracle-19C 及以上版本，则需要在本地 OceanBase 数据库中安装并配置 OCI-12.2；如果远端数据库版本为 Oracle-12C 及以下版本，则需要在本地 OceanBase 数据库中安装并配置 OCI-11.2。
+
+  安装和配置 OCI-12.2 的详细操作，请参见 [安装和配置 OCI-12.2](600.install-and-configure-the-oci-122.md)。
+
+  安装和配置 OCI-12.2 的详细操作，请参见 [安装和配置 OCI-11.2](610.install-and-configure-the-oci-112.md)
+
+* 当前仅支持通过 DBLink 调用远端数据库中的独立存储过程和包存储过程，暂不支持 UDF（User-Defined functions）和包函数的远程调用。
+
+### 调用存储过程
+
+
+
+
+
 
 ## 相关文档
 
