--- a/zh-CN/700.reference/500.sql-reference/100.sql-syntax/200.common-tenant-of-mysql-mode/600.sql-statement-of-mysql-mode/2600.create-table-of-mysql-mode.md
+++ b/zh-CN/700.reference/500.sql-reference/100.sql-syntax/200.common-tenant-of-mysql-mode/600.sql-statement-of-mysql-mode/2600.create-table-of-mysql-mode.md
@@ -140,7 +140,8 @@ partition_count | subpartition_count:
 |------------------------------------------------------|-----------------------------------|
 | TEMPORARY                                            | 将该表创建为临时表。|
 | PRIMARY KEY                                          | 为创建的表指定主键。如果不指定，则使用隐藏主键。 特别地，OceanBase 数据库不支持修改表的主键或通过 `ALTER TABLE` 语句为表添加主键，因此推荐您在创建表时指定好表的主键。   |
-| FOREIGN KEY                                          | 为创建的表指定外键。如果不指定外键名，则会使用表名 + `OBFK` + 创建时间命名。（例如，在 2021 年 8 月 1 日 00:00:00 为 `t1` 表创建的外键名称为 `t1_OBFK_1627747200000000`）。    |
+| FOREIGN KEY                                          | 为创建的表指定外键。如果不指定外键名，则会使用表名 + `OBFK` + 创建时间命名。（例如，在 2021 年 8 月 1 日 00:00:00 为 `t1` 表创建的外键名称为 `t1_OBFK_1627747200000000`）。外键允许跨表交叉引用相关数据，当 `UPDATE` 或 `DELETE` 操作影响与子表相匹配行的父表中键值时，其结果取决于 `ON UPDATE` 和 `ON DELETE` 子句的引用操作：<ul><li>`CASCADE`：从父表中删除或更新行，并自动删除或更新子表中匹配的行。</li><li>SET NULL：从父表中删除或更新行，并将子表中的外键列设置为 NULL。</li><li>RESTRICT：拒绝对父表的删除或更新操作。</li><li>NO ACTION指定延迟检查； 使用此功能时，直到提交时才会执行约束检查。</li><li>SET DEFAULT：
+● MySQL同时支持update和 delete的 set null 行为，不过对于自引用的外键列上定义update的set null操作，但是其实际表现为 restrict; 自引用的外键列上可以定义delete操作的set null行为；    |
 | KEY \| INDEX                                         | 为创建的表指定键或索引。 如果不指定索引名，则会使用索引引用的第一列作为索引名，如果命名存在重复，则会使用下划线（_）+ 序号的方式命名。（例如，使用 `c1` 列创建的索引如果命名重复，则会将索引命名为 `c1_2`。） 您可以通过 `SHOW INDEX` 语句查看表上的索引。    |
 | key_part        | 创建（函数）索引。 |
 | index_col_name  | 指定索引的列名，每个列名后都支持 ASC（升序），不支持 DESC（降序）。默认为升序。 建立索引的排序方式为：首先以 `index_col_name` 中第一个列的值排序；该列值相同的记录，按下一列名的值排序；以此类推。 |
