V421newfeature-sql audit add FLT_TRACE_ID

--- a/zh-CN/700.reference/1000.performance-tuning-guide/500.sql-optimization/400.sql-optimization/300.monitor-sql-execution-performance/100.gv-ob-sql-audit.md
+++ b/zh-CN/700.reference/1000.performance-tuning-guide/500.sql-optimization/400.sql-optimization/300.monitor-sql-execution-performance/100.gv-ob-sql-audit.md
@@ -130,3 +130,4 @@
 | PLAN_HASH               | bigint(20) unsigned | number(38)     |执行计划的 Hash 值   |
 | LOCK_FOR_READ_TIME      | bigint(20)          | number(38)     |读取数据时等待锁的耗时，单位：微秒       |
 | PARAMS_VALUE            | longtext            | CLOB      | 参数值      |
+| FLT_TRACE_ID    | VARCHAR:OB_MAX_SPAN_LENGTH | VARCHAR:OB_MAX_SPAN_LENGTH| 该条记录全链路诊断的 Trace ID。如果为空, 则说明没有被全链路诊断监控。该字段是 UUID, 有别于Trace，其表示形式示例为:000600d6-a5de-038c-6c80-df07e4e79149|
