--- a/zh-CN/600.manage/1000.troubleshooting/900.backup-and-recovery/100.data-backup-failed.md
+++ b/zh-CN/600.manage/1000.troubleshooting/900.backup-and-recovery/100.data-backup-failed.md
@@ -2,11 +2,13 @@
 
 本节主要介绍在物理备份过程中出现数据备份失败问题时的排查及定位方法。
 
+本文档中以 OceanBase 数据库的安装目录为 `/home/admin/oceanbase` 为例提供排查指导，文档中涉及的日志的实际存放路径请以实际环境为主。
+
 ## 问题一：数据备份任务发起失败
 
 数据备份任务发起失败后，可以通过以下步骤进行排查。
 
-1. 租户管理员登录集群的 `sys` 租户。
+1. 使用 `root` 用户登录集群的 `sys` 租户。
 
 2. 执行以下语句，确认任务失败的原因。
 
@@ -84,7 +86,7 @@
 
 数据备份卡在某个状态不结束时，可以通过以下步骤进行排查：
 
-1. 租户管理员登录集群的 `sys` 租户。
+1. 使用 `root` 用户登录集群的 `sys` 租户。
 
 2. 执行以下语句，确认任务卡住的状态。
 
@@ -164,7 +166,7 @@
 
 您可以通过视图结合日志来进行排查定位，具体步骤如下：
 
-1. 租户管理员登录集群的 `sys` 租户。
+1. 使用 `root` 用户登录集群的 `sys` 租户。
 
 2. 确认任务失败的出错点。
 
