--- a/zh-CN/400.deploy/300.deploy-oceanbase-enterprise-edition/200.preparations-before-deploy/100.prepare-servers.md
+++ b/zh-CN/400.deploy/300.deploy-oceanbase-enterprise-edition/200.preparations-before-deploy/100.prepare-servers.md
@@ -30,3 +30,12 @@
   <h4>说明</h4>
   <p><ul><li>OceanBase 数据库集群高可用和容灾时至少由三个节点组成，每个节点对应一个 observer 进程，不同节点上的多个 observer 进程组成一个集群对外提供服务。</li><li>在部署 OceanBase 集群后，是否需要部署 ODP 主要取决于您的应用场景和需求：<ul><li>如果您的应用需要对 OceanBase 集群进行高可用、负载均衡或连接池管理等操作，那么可以考虑部署 ODP。ODP 可以有效地解决 OceanBase 集群的连接数和负载均衡等问题，提高应用程序的稳定性和可靠性。</li><li>如果您的应用只是简单地连接到 OceanBase 集群进行查询和操作，而不需要进行高可用、负载均衡或连接池管理等操作，那么可以不部署 ODP，直接使用 OceanBase 提供的客户端库连接到集群，也可以满足应用的需求。</li></ul>ODP 的详细特性，请参见 <a href="https://www.oceanbase.com/docs/enterprise-odp-enterprise-cn-10000000001715894">ODP 概述</a>。</li></ul></p>
 </main>
+
+## 仲裁服务器
+
+如果您准备使用三台服务器部署两副本的 OceanBase 集群 和仲裁服务，那么仲裁服务器应满足以下所示的最小机器规格：
+
+| 版本 | 支持的最小规格 | 带宽 | 备注 |
+| ------ | ------ | ------ | ------ |
+| V4.1.0.0 | <ul><li>CPU：2 核 </li><li>内存：8 GB </li><li>磁盘：CLog 盘需要至少 5GB 的磁盘空间。| 要求输入和输出的数据传输速率都至少为 20 Mbps。 | 不需要配置用于存储数据的磁盘空间（`data` 盘）；存放日志文件的 `log` 目录需要单独预留空间。|
+| V4.1.0 BP1 及以后版本 | <ul><li>CPU：2 核 </li><li>内存：4 GB </li><li>磁盘：CLog 盘需要至少 5GB 的磁盘空间。 | 要求输入和输出的数据传输速率都至少为 20 Mbps。 | 不需要配置用于存储数据的磁盘空间（`data` 盘）；存放日志文件的 `log` 目录需要单独预留空间。 |
