fix data security errors

--- a/zh-CN/700.reference/200.administrator-guide/100.database-connection-and-routing/200.obproxy-management/200.manage-obproxy-clusters/200.obproxy-cluster-parameter-management.md
+++ b/zh-CN/700.reference/200.administrator-guide/100.database-connection-and-routing/200.obproxy-management/200.manage-obproxy-clusters/200.obproxy-cluster-parameter-management.md
@@ -12,7 +12,7 @@
 
 4. 单击左侧导航栏的 **参数管理**，默认进入 **参数列表** 页签。
 
-   ![image.png](http://icms-x-dita.oss-cn-zhangjiakou.aliyuncs.com/xdita-output/zh-CN/task15904357/images/p200028.png?Expires=7258125489&OSSAccessKeyId=LTAIJfoPL6wmrirR&Signature=HFjXTdvWPKvmVhSV6keo7Xt%2BtPY%3D "image.png")
+   ![image.png](https://help-static-aliyun-doc.aliyuncs.com/assets/img/zh-CN/4404757361/p356008.png)
 
    在该页中，您可以：
 
