--- a/zh-CN/900.release-notes/10100.enterprise-edition-history-release/10100.V3.2/9700.ob-322.md
+++ b/zh-CN/900.release-notes/10100.enterprise-edition-history-release/10100.V3.2/9700.ob-322.md
@@ -142,11 +142,11 @@ MySQL 模式下移除同义词功能。
 
     支持在创建索引时选择使用全局索引或局部索引，如果不指定关键字，则默认创建局部索引。在为分区表选择索引时，我们推荐优先使用局部索引，在大多数场景中，局部索引的性能表现优于全局索引。
 
-    更多详细信息，参见 [CREAT INDEX](https://www.oceanbase.com/docs/oceanbase-database/oceanbase-database/V3.2.2/create-index)。
+    更多详细信息，参见 [CREATE INDEX](https://www.oceanbase.com/docs/enterprise-oceanbase-database-cn-10000000000361872)。
 
   * 新增支持聚合函数 BIT_AND()/BIT_OR()/BIT_XOR()，返回表达式的按位与/或/异或的运算结果。
 
-    更多详细信息，参见 [BIT_AND](https://www.oceanbase.com/docs/oceanbase-database/oceanbase-database/V3.2.2/BIT_AND-1)、[BIT_OR](https://www.oceanbase.com/docs/oceanbase-database/oceanbase-database/V3.2.2/BIT_OR-1)、[BIT_XOR](https://www.oceanbase.com/docs/oceanbase-database/oceanbase-database/V3.2.2/BIT_XOR-1)。
+    更多详细信息，参见 [BIT_AND](https://www.oceanbase.com/docs/enterprise-oceanbase-database-cn-10000000000363784)、[BIT_OR](https://www.oceanbase.com/docs/enterprise-oceanbase-database-cn-10000000000363785)、[BIT_XOR](https://www.oceanbase.com/docs/enterprise-oceanbase-database-cn-10000000000363786)。
 
   * 支持 OUTER JOIN 的连接条件为子查询语句。
 
@@ -198,7 +198,7 @@ MySQL 模式下移除同义词功能。
 
 |                                                                              配置项                                                                               | 默认值 | 修改类型 | 新默认值 |                   描述                   |
 |----------------------------------------------------------------------------------------------------------------------------------------------------------------|-----|------|------|----------------------------------------|
-| [default_transport_compress_func](https://www.oceanbase.com/docs/oceanbase-database/oceanbase-database/V3.2.2/default_transport_compress_func) | NA  | 新增   | none | 适用于在网络带宽紧张、CPU 资源相对充裕的场景下，配置网络传输的压缩算法。 |
+| [default_transport_compress_func](https://www.oceanbase.com/docs/enterprise-oceanbase-database-cn-10000000000363148) | NA  | 新增   | none | 适用于在网络带宽紧张、CPU 资源相对充裕的场景下，配置网络传输的压缩算法。 |
 
 **行为变更**
 
