--- a/en-US/700.reference/700.command-line-tools/800.ob-agent/300.install-and-deploy-obagent/300.use-obd-to-deploy-obagent.md
+++ b/en-US/700.reference/700.command-line-tools/800.ob-agent/300.install-and-deploy-obagent/300.use-obd-to-deploy-obagent.md
@@ -79,7 +79,6 @@ obd cluster deploy <deploy name> [-c <yaml path>] [-f] [-U] [-A]
 obd cluster start <deploy name> [flags]
 ```
 
-<!-- For more information, see [Cluster commands](https://open.oceanbase.com/docs/obd-cn/V1.2.0/10000000000017241). -->
 
 ## Start Prometheus (Optional)
 
@@ -132,4 +131,4 @@ groups:
 
 ## Update KV parameters (Optional) 
 
-To update the KV configuration, use `obd cluster edit-config`. <!-- For more information, see the `obd cluster edit-config` section in [Cluster commands](https://open.oceanbase.com/docs/obd-cn/V1.2.0/10000000000017241).-->
+To update the KV configuration, use `obd cluster edit-config`. 
