--- a/zh-CN/400.deploy/300.deploy-oceanbase-enterprise-edition/200.preparations-before-deploy/100.prepare-servers.md
+++ b/zh-CN/400.deploy/300.deploy-oceanbase-enterprise-edition/200.preparations-before-deploy/100.prepare-servers.md
@@ -39,3 +39,17 @@
 | ------ | ------ | ------ | ------ |
 | V4.1.0.0 | <ul><li>CPU：2 核 </li><li>内存：8 GB </li><li>磁盘：CLog 盘需要至少 5GB 的磁盘空间。| 要求输入和输出的数据传输速率都至少为 20 Mbps。 | 不需要配置用于存储数据的磁盘空间（`data` 盘）；存放日志文件的 `log` 目录需要单独预留空间。|
 | V4.1.0 BP1 及以后版本 | <ul><li>CPU：2 核 </li><li>内存：4 GB </li><li>磁盘：CLog 盘需要至少 5GB 的磁盘空间。 | 要求输入和输出的数据传输速率都至少为 20 Mbps。 | 不需要配置用于存储数据的磁盘空间（`data` 盘）；存放日志文件的 `log` 目录需要单独预留空间。 |
+
+### 资源规划
+
+CPU 型号参考 : Intel(R) Xeon(R) CPU E5-2682 v4 @ 2.50GHz
+
+仲裁服务器的资源规划参考如下规则：
+
+* 最小规格机器（2C4G）默认可支持 32 个用户租户和 `sys` 租户同时开启仲裁（2F（2 副本集群）或 4F（4 副本集群），primary_zone=RANDOM，unit_num=1）。
+* 每新增 32 个单 Unit 租户（2F 或 4F，`primary_zone=RANDOM`，`unit_num=1`），仲裁服务器资源需相应地至少增加：1C1G，日志盘 2GB，网络带宽 20 Mbps。
+* 对于 `unit_num=N`（N>1）的场景，可简单地当做 N 个单 Unit 租户处理。
+
+### 网络延迟要求
+
+仲裁服务器和 OceanBase 集群节点之间的单程网络延迟小于等于 800ms。
