--- a/en-US/200.quickstart/100.fast-oceanbase-experience.md
+++ b/en-US/200.quickstart/100.fast-oceanbase-experience.md
@@ -173,7 +173,7 @@ For more information about deploying an OceanBase cluster, see [Deployment intro
    > **Note**
    >
    > * The IP address in the sample code is for reference only. You must enter the actual IP address of your server during deployment.
-   > * Run the following OBClient command to connect to the started observer process. The password is empty.
+   > * Run the following OBClient command to connect to the started observer process. 
 
    ```sql
    [root@hostname /]# obclient -h127.0.0.1 -uroot@sys -P2881 -p
