--- a/en-US/300.developer-guide/200.application-development-based-on-mysql-mode/100.client-connects-to-oceanbase-database/900.springbatch-connection-example.md
+++ b/en-US/300.developer-guide/200.application-development-based-on-mysql-mode/100.client-connects-to-oceanbase-database/900.springbatch-connection-example.md
@@ -48,7 +48,7 @@ spring:
     driver-class-name: com.alipay.oceanbase.jdbc.Driver
 #    username: admin@mysql
     username: admin@oracle
-    password: admin
+    password: ****
   jpa:
     hibernate:
       ddl-auto: update
