--- a/en-US/300.developer-guide/300.Application-development-based-on-Oracle-mode/200.application-development-1/300.c-application-1/0200.api-operations-related-to-obci.md
+++ b/en-US/300.developer-guide/300.Application-development-based-on-Oracle-mode/200.application-development-1/300.c-application-1/0200.api-operations-related-to-obci.md
@@ -334,7 +334,7 @@ int main(int argc, char *argv[]) {
     /*Specify the server, username, and password as needed.*/
     strcpy(strServerName, "192.160.0.1/test");
     strcpy(strUserName, "test");
-    strcpy(strPassword, "test");
+    strcpy(strPassword, "****");
     /*Initialize the OCI application environment.*/
     OCI_CHECK_RET(errhp, OCIInitialize(OCI_DEFAULT, NULL, NULL, NULL, NULL));
     /*Initialize the OCI process environment.*/
