--- a/en-US/700.reference/700.command-line-tools/800.ob-agent/300.install-and-deploy-obagent/300.use-obd-to-deploy-obagent.md
+++ b/en-US/700.reference/700.command-line-tools/800.ob-agent/300.install-and-deploy-obagent/300.use-obd-to-deploy-obagent.md
@@ -42,16 +42,16 @@ obagent:
     # Username for HTTP authentication. The default value is admin.
     http_basic_auth_user: admin
     # Password for HTTP authentication. The default value is root.
-    http_basic_auth_password: root
+    http_basic_auth_password: ****
     # Username for debug service. The default value is admin.
     pprof_basic_auth_user: admin
     # Password for debug service. The default value is root.
-    pprof_basic_auth_password: root
+    pprof_basic_auth_password: ****
 
     # The following parameters must be consistent with those in the OceanBase Database configuration file.
     # Monitor username for OceanBase Database. The user must have read access to OceanBase Database as a system tenant. The default value is root.
     monitor_user: root
-    # Monitor password for OceanBase Database. The default value is empty. When a depends exists, OBD gets this value from the oceanbase-ce of the depends. The value is the same as the root_password in oceanbase-ce.
+    # Monitor password for OceanBase Database. When a depends exists, OBD gets this value from the oceanbase-ce of the depends. The value is the same as the root_password in oceanbase-ce.
     monitor_password:
     # The SQL port for observer. The default value is 2881. When a depends exists, OBD gets this value from the oceanbase-ce of the depends. The value is the same as the mysql_port in oceanbase-ce.
     sql_port: 2881
@@ -125,7 +125,7 @@ groups:
    ./bin/grafana-server
    ```
 
-* Log on to Grafana and change the password. The default account and password are both `admin` at initial logon.
+* Log on to Grafana and change the password. The default account is `admin` at initial logon.
 * Configure Prometheus as the data source. For more information about how to add a data source, see the "[Add a data source](https://grafana.com/docs/grafana/v7.5/datasources/add-a-data-source/)" topic in Grafana documentation.
 * Import the dashboard. The metric configurations for OceanBase Database and the server are published in Grafana, with the configuration IDs of `15215` and `15216`, respectively. For more information about how to import the dashboard, see the "[Export and import](https://grafana.com/docs/grafana/v7.5/dashboards/export-import/)" topic in Grafana documentation.
 
