--- a/zh-CN/700.reference/700.command-line-tools/800.ob-agent/300.install-and-deploy-obagent/300.use-obd-to-deploy-obagent.md
+++ b/zh-CN/700.reference/700.command-line-tools/800.ob-agent/300.install-and-deploy-obagent/300.use-obd-to-deploy-obagent.md
@@ -43,17 +43,17 @@ obagent:
   global:
     # Username for HTTP authentication. The default value is admin.
     http_basic_auth_user: admin
-    # Password for HTTP authentication. The default value is root.
-    http_basic_auth_password: root
+    # Password for HTTP authentication. The default value is ****.
+    http_basic_auth_password: ****
     # Username for debug service. The default value is admin.
     pprof_basic_auth_user: admin
-    # Password for debug service. The default value is root.
-    pprof_basic_auth_password: root
+    # Password for debug service. The default value is ****.
+    pprof_basic_auth_password: ****
     
     # 以下配置必须与 OceanBase 数据库一致
     # Monitor username for OceanBase Database. The user must have read access to OceanBase Database as a system tenant. The default value is root.
     monitor_user: root
-    # Monitor password for OceanBase Database. The default value is empty. When a depends exists, OBD gets this value from the oceanbase-ce of the depends. The value is the same as the root_password in oceanbase-ce.
+    # Monitor password for OceanBase Database. The default value is ****. When a depends exists, OBD gets this value from the oceanbase-ce of the depends. The value is the same as the root_password in oceanbase-ce.
     monitor_password: 
     # The SQL port for observer. The default value is 2881. When a depends exists, OBD gets this value from the oceanbase-ce of the depends. The value is the same as the mysql_port in oceanbase-ce.
     sql_port: 2881
@@ -129,7 +129,7 @@ groups:
   ./bin/grafana-server
   ```
 
-* 登陆 grafana 并且修改密码，第一次登陆默认账号和密码都是 `admin`。
+* 登陆 grafana 并且修改密码，第一次登陆默认账号是 `admin`。
 * 配置 prometheus 为数据源, 添加数据源的方式参考 [grafana 文档](https://grafana.com/docs/grafana/v7.5/datasources/add-a-data-source/)。
 * 导入 dashboard，针对 OceanBase 数据库和主机指标的配置已经发布到 grafana，id 分别为 `15215`、`15216`，导入 dashboard 的方式请参考 [grafana 文档](https://grafana.com/docs/grafana/v7.5/dashboards/export-import/)。
 
