--- a/en-US/700.reference/700.command-line-tools/900.ob-agent/300.install-and-deploy-obagent/300.use-obd-to-deploy-obagent.md
+++ b/en-US/700.reference/700.command-line-tools/900.ob-agent/300.install-and-deploy-obagent/300.use-obd-to-deploy-obagent.md
@@ -81,7 +81,7 @@ obd cluster deploy <deploy name> [-c <yaml path>] [-f] [-U] [-A]
 obd cluster start <deploy name> [flags]
 ```
 
-For more information, see [Cluster commands](https://open.oceanbase.com/docs/obd-cn/V1.2.0/10000000000017241). 
+For more information, see [Cluster commands](https://www.oceanbase.com/docs/community-obd-cn-10000000000017232). 
 
 ## Start Prometheus (Optional)
 
@@ -135,4 +135,4 @@ groups:
 
 ## Update KV parameters (Optional)
 
-To update the KV configuration, use `obd cluster edit-config`. For more information, see the `obd cluster edit-config` section in [Cluster commands](https://open.oceanbase.com/docs/obd-cn/V1.2.0/10000000000017241). 
+To update the KV configuration, use `obd cluster edit-config`. For more information, see the `obd cluster edit-config` section in [Cluster commands](https://www.oceanbase.com/docs/community-obd-cn-10000000000017232). 
