--- a/zh-CN/600.manage/600.backup-and-recovery/600.restore-data/300.cancel-a-restore.md
+++ b/zh-CN/600.manage/600.backup-and-recovery/600.restore-data/300.cancel-a-restore.md
@@ -2,7 +2,7 @@
 
 在恢复租户数据的过程中，您可以通过 `ALTER SYSTEM CANCEL RESTORE` 语句来停止恢复，该语句会删除处于恢复状态的租户。
 
-## 操作步骤
+## 取消物理恢复
 
 1. 使用 `root` 用户登录待恢复的租户所在集群的 `sys` 租户。
 
@@ -13,3 +13,6 @@
    ```
 
    其中，`tenant_name` 需要填写待恢复的租户名称。
+
+## 取消指定表的恢复
+
