--- a/zh-CN/600.manage/600.backup-and-recovery/600.restore-data/400.view-the-restore-progress.md
+++ b/zh-CN/600.manage/600.backup-and-recovery/600.restore-data/400.view-the-restore-progress.md
@@ -2,7 +2,7 @@
 
 执行全量恢复后，可以通过视图查看恢复进度。
 
-## 操作步骤
+## 查看物理恢复的恢复进度
 
 1. 使用 `root` 用户登录集群的 `sys` 租户。
 
@@ -92,3 +92,5 @@
    更多关于 `CDB_OB_RESTORE_PROGRESS` 视图的介绍，请参见 [恢复视图](../600.restore-data/900.views-of-the-restore.md)。
 
    待恢复完成后，可以查看恢复结果，具体操作请参见 [查看恢复结果](../600.restore-data/500.view-the-restore-history.md)。
+
+## 查看表恢复的进度
