--- a/zh-CN/600.manage/600.backup-and-recovery/600.restore-data/500.view-the-restore-history.md
+++ b/zh-CN/600.manage/600.backup-and-recovery/600.restore-data/500.view-the-restore-history.md
@@ -2,7 +2,7 @@
 
 执行全量恢复后，可以通过视图查看恢复结果。
 
-## 操作步骤
+## 查看物理恢复结果
 
 1. 使用 `root` 用户登录集群的 `sys` 租户。
 
@@ -80,10 +80,12 @@
 
     如果恢复失败，您可以通过删除租户的方式来取消本次恢复，具体操作请参见 [取消恢复](../600.restore-data/300.cancel-a-restore.md)。
 
-## 后续操作
+### 后续操作
 
-恢复操作执行成功后，恢复后的租户均为备租户，您可执行如下操作:
+物理恢复执行成功后，恢复后的租户均为备租户，您可执行如下操作:
 
-* 执行`recover`命令, 作为备租户继续日志归档从源租户回放日志, 具体操作参见 [备租户日志回放](../600.restore-data/700.recover-the-standby-tenant.md)。
+* 执行 `recover` 命令, 作为备租户继续日志归档从源租户回放日志, 具体操作参见 [备租户日志回放](../600.restore-data/700.recover-the-standby-tenant.md)。
 
 * 执行备切主命令，将备租户转换为主租户，具体操作参见 [备租户转为主租户](../600.restore-data/600.active-standby-tenant.md)。
+
+## 查看表恢复结果
