410：load add limitation2

--- a/zh-CN/500.data-migration/1100.bypass-import/200.use-load-data-statement-to-bypass-import-data.md
+++ b/zh-CN/500.data-migration/1100.bypass-import/200.use-load-data-statement-to-bypass-import-data.md
@@ -8,7 +8,7 @@
 * 不支持在触发器（Trigger）使用。
 * 支持 `lob` 类型，但是性能比较差，`lob` 会走原来事务写入数据的路径。
 * 不能在多行事务中运行。
-* OceanBase 数据库 V4.1.0 版本不建议开启 Online 统计信息收集，建议在 `LOAD DATA` 完成后手动统计信息收集。有关收集统计信息的详细信息请参见 [在线统计信息收集](../../700.reference/300.performance-tuning-guide/500.sql-optimization/400.sql-optimization/400.optimizer-statistics/200.statistics-collection-methods/500.online-statistics-collection.md) 和 [手动统计信息收集](../../600.manage/900.performance-tuning/400.sql-tuning/200.execution-plan-optimization/100.statistics-and-cost-based-optimization/200.statistic-information/200.collect-statistic-information/200.manually-collect-statistic-information.md)。
+* OceanBase 数据库 V4.1.0 版本不建议开启 Online 统计信息收集，建议在 `LOAD DATA` 完成后，手动收集统计信息。有关收集统计信息的详细信息，请参见 [在线统计信息收集](../../700.reference/300.performance-tuning-guide/500.sql-optimization/400.sql-optimization/400.optimizer-statistics/200.statistics-collection-methods/500.online-statistics-collection.md) 和 [手动统计信息收集](../../600.manage/900.performance-tuning/400.sql-tuning/200.execution-plan-optimization/100.statistics-and-cost-based-optimization/200.statistic-information/200.collect-statistic-information/200.manually-collect-statistic-information.md)。
 
 ## 语法
 
