--- a/zh-CN/700.reference/300.performance-tuning-guide/500.sql-optimization/400.sql-optimization/300.monitor-sql-execution-performance/100.gv-ob-sql-audit.md
+++ b/zh-CN/700.reference/300.performance-tuning-guide/500.sql-optimization/400.sql-optimization/300.monitor-sql-execution-performance/100.gv-ob-sql-audit.md
@@ -87,18 +87,18 @@
 | IS_INNER_SQL            | tinyint(4)          | number(38)     |是否为内部 SQL 请求      |
 | IS_EXECUTOR_RPC         | tinyint(4)          | number(38)     |当前请求是否为 RPC 请求      |
 | IS_HIT_PLAN             | tinyint(4)          | number(38)     |是否命中计划缓存    |
-| REQUEST_TIME            | bigint(20)          | number(38)     |开始执行时间点    |
-| ELAPSED_TIME            | bigint(20)          | number(38)     |接收到请求到执行结束消耗总时间       |
-| NET_TIME                | bigint(20)          | number(38)     |发送 RPC 到接收到请求时间       |
-| NET_WAIT_TIME           | bigint(20)          | number(38)     |接收到请求到进入队列时间        |
-| QUEUE_TIME              | bigint(20)          | number(38)     |请求在队列等待事件      |
-| DECODE_TIME             | bigint(20)          | number(38)     |出队列后 Decode 时间      |
-| GET_PLAN_TIME           | bigint(20)          | number(38)     |开始执行到获得计划时间      |
-| EXECUTE_TIME            | bigint(20)          | number(38)     |Plan 执行消耗时间       |
-| APPLICATION_WAIT_TIME   | bigint(20) unsigned | number(38)     |所有 Application 类事件的总时间      |
-| CONCURRENCY_WAIT_TIME   | bigint(20) unsigned | number(38)     |所有 Concurrency 类事件的总时间     |
-| USER_IO_WAIT_TIME       | bigint(20) unsigned | number(38)     |所有 `user_io` 类事件的总时间    |
-| SCHEDULE_TIME           | bigint(20) unsigned | number(38)     |所有 Schedule 类事件的时间      |
+| REQUEST_TIME            | bigint(20)          | number(38)     |开始执行时间点（微秒）    |
+| ELAPSED_TIME            | bigint(20)          | number(38)     |接收到请求到执行结束消耗总时间（微秒）       |
+| NET_TIME                | bigint(20)          | number(38)     |发送 RPC 到接收到请求时间（微秒）       |
+| NET_WAIT_TIME           | bigint(20)          | number(38)     |接收到请求到进入队列时间（微秒）        |
+| QUEUE_TIME              | bigint(20)          | number(38)     |请求在队列等待时间（微秒）      |
+| DECODE_TIME             | bigint(20)          | number(38)     |出队列后 Decode 时间（微秒）      |
+| GET_PLAN_TIME           | bigint(20)          | number(38)     |开始执行到获得计划时间（微秒）      |
+| EXECUTE_TIME            | bigint(20)          | number(38)     |Plan 执行消耗时间（微秒）       |
+| APPLICATION_WAIT_TIME   | bigint(20) unsigned | number(38)     |所有 Application 类事件的总时间（微秒）      |
+| CONCURRENCY_WAIT_TIME   | bigint(20) unsigned | number(38)     |所有 Concurrency 类事件的总时间（微秒）     |
+| USER_IO_WAIT_TIME       | bigint(20) unsigned | number(38)     |所有 `user_io` 类事件的总时间（微秒）    |
+| SCHEDULE_TIME           | bigint(20) unsigned | number(38)     |所有 Schedule 类事件的时间（微秒）      |
 | ROW_CACHE_HIT           | bigint(20)          | number(38)     |行缓存命中次数     |
 | BLOOM_FILTER_CACHE_HIT  | bigint(20)          | number(38)     |Bloom Filter 缓存命中次数     |
 | BLOCK_CACHE_HIT         | bigint(20)          | number(38)     |块缓存命中次数      |
@@ -121,12 +121,12 @@
 | SCHED_INFO              | varchar(16384)      | varchar(16384) | 请求的调度信息       |
 | FUSE_ROW_CACHE_HIT      | bigint(20)          | number(38)     |暂不支持该字段，字段默认为 `NULL`        |
 | PS_CLIENT_STMT_ID              | bigint(20)          | NO             | 请求对应的 Prepare ID： <ul><li> `-1`：表示 SQL 语句没有使用 PS 协议  </li><li> 非 `-1`：表示 SQL 语句使用了 PS 协议，为 PS 协议在客户端对该语句返回的唯一标志</li></ul>    |
-| PS_INNER_STMT_ID              | bigint(20)          | NO             | 请求对应的 Prepare ID： <ul><li> `-1`：表示 SQL 语句没有使用 PS 协议   </li><li>> 非 `-1`：表示 SQL 语句使用了 PS 协议，为 PS 协议在内部对该语句返回的唯一标志</li></ul>    |
+| PS_INNER_STMT_ID              | bigint(20)          | NO             | 请求对应的 Prepare ID： <ul><li> `-1`：表示 SQL 语句没有使用 PS 协议   </li><li> 非 `-1`：表示 SQL 语句使用了 PS 协议，为 PS 协议在内部对该语句返回的唯一标志</li></ul>    |
 |  TX_ID       | bigint(20)  | NO             | 请求对应的事务的 Hash 值     |
 |  SNAPSHOT_VERSION       | bigint(20)unsigned  | NO             | 当前语句的快照读版本号     |
 | REQUEST_TYPE            | bigint(20)          | number(38)     |请求对应的类型： <ul><li> 0：表示非法   <li> 1：表示是一个内部请求</li>  <li> 2：表示是一个本地请求，例如 Local 计划</li>   <li> 3：表示远程请求</li>   <li> 4：表示分布式请求 </li>  <li> 5：表示 SQL 的 Prepare 请求</li>   <li> 6：表示 SQL 得到 Execute Stmt 请求</li>   <li> 7: 表示 SQL 得到 Fetch 请求</li>   <li>8: 表示 SQL 得到 `send_piece` 请求 </li>   <li>9: 表示 SQL 得到 `get_piece` 请求 </li>   <li>10: 表示 SQL 得到 `send_long_data` 请求</li>   <li>11: 表示当前 SQL 是 PL 调用的内部 SQL</li></ul>    |
 | IS_BATCHED_MULTI_STMT   | tinyint(4)          | number(38)     |是否进行 Batch Multi Stmt 的优化    |
 | OB_TRACE_INFO           | VARCHAR2(4096)      | VARCHAR2(4096)  |用户设置的 Trace 信息      |
 | PLAN_HASH               | bigint(20) unsigned | number(38)     |执行计划的 Hash 值   |
-| LOCK_FOR_READ_TIME      | bigint(20)          | number(38)     |读取数据时等待锁的耗时，单位：微秒       |
+| LOCK_FOR_READ_TIME      | bigint(20)          | number(38)     |读取数据时等待锁的耗时（微秒）       |
 | PARAMS_VALUE            | longtext            | CLOB      | 参数值      |
