--- a/zh-CN/600.manage/600.backup-and-recovery/600.restore-data/400.view-the-restore-progress.md
+++ b/zh-CN/600.manage/600.backup-and-recovery/600.restore-data/400.view-the-restore-progress.md
@@ -92,7 +92,7 @@
 
    待恢复完成后，可以查看恢复结果，具体操作请参见 [查看恢复结果](../600.restore-data/500.view-the-restore-history.md)。
 
-## 查看表恢复的进度
+## 查看指定表的恢复进度
 
 表的恢复过程主要包含以下两个任务：恢复任务和导入任务。恢复任务负责从备份数据中将指定时间点的数据恢复到辅助租户中；导入任务负责将指定的表从辅助租户跨租户导入到目标租户中。
 
