--- a/zh-CN/700.reference/500.sql-reference/100.sql-syntax/200.common-tenant-of-mysql-mode/600.sql-statement-of-mysql-mode/2200.create-external-table-of-mysql-mode.md
+++ b/zh-CN/700.reference/500.sql-reference/100.sql-syntax/200.common-tenant-of-mysql-mode/600.sql-statement-of-mysql-mode/2200.create-external-table-of-mysql-mode.md
@@ -71,10 +71,10 @@ CREATE EXTERNAL TABLE <table_name>
    CSV 文件中的内容如下：
 
    ```shell
-   1,'Dave','Smith','dsmith@outlook.com','friend',32 
-   2,'Xena','Johnson','xjonson@outlook.com','contact',45
-   3,'Fred','Jackon','fjackson@outlook.com','co-worker',19
-   4,'Alma','Tyler','atyler@outlook.com','friend',53
+   1,'Dave','Smith','d******h@outlook.com','friend',32 
+   2,'Xena','Johnson','x******n@outlook.com','contact',45
+   3,'Fred','Jackon','f******n@outlook.com','co-worker',19
+   4,'Alma','Tyler','a******r@outlook.com','friend',53
    ```
   
 2. 用户租户登陆数据库后，创建外表 `contacts`。
@@ -104,10 +104,10 @@ CREATE EXTERNAL TABLE <table_name>
    +----+-----------+----------+----------------------+-----------+------+
    | id | firstname | lastname | email                | category  | age  |
    +----+-----------+----------+----------------------+-----------+------+
-   |  1 | Dave      | Smith    | dsmith@outlook.com   | friend    |   32 |
-   |  2 | Xena      | Johnson  | xjonson@outlook.com  | contact   |   45 |
-   |  3 | Fred      | Jackon   | fjackson@outlook.com | co-worker |   19 |
-   |  4 | Alma      | Tyler    | atyler@outlook.com   | friend    |   53 |
+   |  1 | Dave      | Smith    | d******h@outlook.com | friend    |   32 |
+   |  2 | Xena      | Johnson  | x******n@outlook.com | contact   |   45 |
+   |  3 | Fred      | Jackon   | f******n@outlook.com | co-worker |   19 |
+   |  4 | Alma      | Tyler    | a******r@outlook.com | friend    |   53 |
    +----+-----------+----------+----------------------+-----------+------+
    4 rows in set  
    ```
