--- a/zh-CN/500.data-migration/300.migrate-data-from-oceanbase-database-to-mysql-database/600.use-chunjun-to-migrate-data-from-oceanbase-database-to-mysql-database.md
+++ b/zh-CN/500.data-migration/300.migrate-data-from-oceanbase-database-to-mysql-database/600.use-chunjun-to-migrate-data-from-oceanbase-database-to-mysql-database.md
@@ -191,7 +191,6 @@ nErrors                   |  0
 ```sql
 [admin@xxx /home/admin]
 $obclient -h10.10.10.2 -P2881 -uroot@mysql001 -p****** -Dtest_data
-Enter password:
 Reading table information for completion of table and column names
 You can turn off this feature to get a quicker startup with -A
 
@@ -213,8 +212,7 @@ Query OK, 1 row affected
 
 ```sql
 [admin@xxx /home/admin]
-$mysql -h10.10.10.1 -P3306 -uroot -p
-Enter password:
+$mysql -h10.10.10.1 -P3306 -uroot -p******
 Welcome to the MariaDB monitor.  Commands end with ; or \g.
 Your MySQL connection id is 189769
 Server version: 5.7.26-log MySQL Community Server (GPL)
