--- a/zh-CN/600.manage/600.backup-and-recovery/600.restore-data/800.parameters-of-the-restore.md
+++ b/zh-CN/600.manage/600.backup-and-recovery/600.restore-data/800.parameters-of-the-restore.md
@@ -2,26 +2,26 @@
 
 本节主要对恢复命令中的相关参数进行介绍。
 
-## 恢复命令相关
+## 租户级恢复命令相关
 
 ### 命令
 
 * 恢复到指定时间戳
 
    ```sql
-   ALTER SYSTEM RESTORE dest_tenant_name FROM uri UNTIL TIME=timestamp WITH restore_option [DESCRIPTION description];
+   ALTER SYSTEM RESTORE dest_tenant_name FROM uri UNTIL TIME=`timestamp` WITH `restore_option` [DESCRIPTION description];
    ```
 
 * 恢复到指定 SCN
 
    ```sql
-   ALTER SYSTEM RESTORE dest_tenant_name FROM uri UNTIL SCN=scn WITH restore_option [DESCRIPTION description];
+   ALTER SYSTEM RESTORE dest_tenant_name FROM uri UNTIL SCN=scn WITH `restore_option` [DESCRIPTION description];
    ```
 
 * 恢复到最新位点
 
    ```sql
-   ALTER SYSTEM RESTORE dest_tenant_name FROM uri WITH restore_option [DESCRIPTION description];
+   ALTER SYSTEM RESTORE dest_tenant_name FROM uri WITH `restore_option` [DESCRIPTION description];
    ```
 
 * 取消正在进行的租户恢复
@@ -56,6 +56,44 @@
 ![可恢复区间](https://obbusiness-private.oss-cn-shanghai.aliyuncs.com/doc/img/observer-enterprise/V4.1.0/user-guide/backup-and-restore/restore-window.jpg)
 
 由于日志归档可能发生中断，故在计算恢复区间时还需要排除中间不连续的时间段，这样就会呈现出分段的可恢复区间，即图中大括号划出的范围：`[scn 300, scn 500] u [scn 900, scn 1500]`。
+
+## 表级恢复命令相关
+
+### 命令
+
+* 恢复指定的表
+
+  ```sql
+  ALTER SYSTEM 
+  RECOVER TABLE table_name_list 
+  TO TENANT dest_tenant_name 
+  FROM uri 
+  [UNTIL [TIME|SCN]=['timestamp'|scn]]
+  WITH 'restore_option'
+  [REMAP TABLE remap_table_name_list] 
+  [REMAP TABLEGROUP remap_tablegroup_list] 
+  [REMAP TABLESPACE remap_tablespace_list];
+  ```
+
+* 取消正在进行的表恢复
+
+   ```sql
+   ALTER SYSTEM CANCEL RECOVER TABLE dest_tenant_name;
+   ```
+
+### 参数解释
+
+|         参数                |     描述                                        |
+|-----------------------------|------------------------------------------------|
+|   table_name_list           |  需要恢复的表名，格式形如 <code>table_name1,table_name1,...</code>，多个表之间使用逗号英文逗号（,）来分隔。</br>如果表的格式为 <code>database_name.table_name</code>，则需要指定表所属的 <code>database_name</code>。<code>database_name</code> 和 <code>table_name</code> 的英文字母会持久化到内部表中：<ul> <li> 对于 Oracle 租户，<code>database_name</code> 的名称与表所在的用户名相同，同时 <code>database_name</code> 和 <code>table_name</code> 默认大小写不敏感，英文字母按照大写持久化到内部表中。</li> <li>对于 MySQL 租户，<code>database_name</code> 的名称为表所属的数据库名，同时 <code>database_name</code> 和 <code>table_name</code> 是否大小写敏感取决于创建源租户时指定的变量 <code>lower_case_table_names</code> 的值。</br>变量 <code>lower_case_table_names</code> 用于设置数据库名和表名是否对大小写敏感。如果创建租户时未指定该变量的值，则默认为数据库名和表名按照小写形式进行存储，并以不区分大小写的形式进行比较。有关变量 <code>lower_case_table_names</code> 的更多说明，请参见 <a href="../../../700.reference/800.configuration-items-and-system-variables/200.system-variable/300.global-system-variable/3600.lower_case_table_names-global.md">lower_case_table_names</a>。</li> <li>对于 <code>database_name</code> 或 <code>table_name</code> 中含有特殊字符的场景，含特殊字符的 <code>database_name</code> 或 <code>table_name</code> 需要放在反引号（``）内。Parser 会正确地处理特殊字符，将序列化后的 <code>table_name_list</code> 持久化到内部表中，当您使用时再进行反序列化，避免解析特殊字符。</li> <li> 如果需要恢复一个 DataBase 下的所有表，则可以表示为 <code>database_name.*</code>。</li> <li>如果需要恢复所有表，则可以表示为 <code>*.*</code>。</li></ul>    |
+|  dest_tenant_name           | 表待恢复的目标租户名，仅支持将表恢复到用户租户中，不支持恢复到 `sys` 租户或 Meta 租户。                                             |
+|  uri                        | 分别指定数据备份和日志归档的路径，与租户级物理恢复命令的参数一样。若数据备份是通过 PLUS ARCHIVELOG 方式发起的，只需要填一个路径即可，否则需要分别输入数据备份和日志归档至少 2 个路径，例如：`'file:///backup/archive, file:///backup/data'`。                                               |
+|    'timestamp'|scn          | 指定的恢复终点，恢复到该位点位置，且包含该位点。当指定恢复到 `TIME` 或 `SCN` 时, 必须以 `=` 来连接指定的值。如果不指定 `UNTIL` 子句，则默认恢复到最新的位点。                                              |
+|    restore_option           | 指定辅助租户的 `pool_list`、`locality`、`primary_zone`、`kms_encrypt`, 其中 `pool_list` 为必选项, 其余为可选项。</br> <code>kms_encrypt</code> 的取值范围如下：<ul><li><code>true</code>：表示源租户为加密租户，需要恢复密钥信息。</li> <li><code>false</code>：表示源租户不是加密租户，不需要恢复密钥信息。如果不指定，默认为 <code>false</code>。 </li></ul>                                           |
+|  remap_table_name_list      | 重命名恢复后的表名。支持仅重命名表名，表所属的 Database 不变；也支持表名不变，仅重命名到其他 Database；还支持重命名表名，同时所属的 Database 为其他 Database。源对象与重命名对象之间使用英文冒号（:）连接，具体格式的示例如下：<ul> <li>表名从 <code>student</code> 重命名为 <code>student2</code>，表所属的 Database 不变：<code>REMAP TABLE school.student:student2</code>。</br>当所属的 Database 不变时，在恢复到目标租户创建表时，系统默认会将表恢复到目标租户同名的 Database 中，如果同名的 Database 不存在，则表恢复就会失败。</li> <li>表名不变，表所属的 Database 从 <code>school<code> 改为 <code>college</code>：<code>REMAP TABLE school.student:college.student</code>。</li> <li>表名从 <code>student</code> 重命名为 <code>student2</code>，表所属的 Database 从 <code>school</code> 改为 <code>college</code>：</code>REMAP TABLE school.student:college.student2</code>。</li> <li>将 <code>school</code> 下的所有表恢复到 <code>college</code> 中：<code>REMAP TABLE school.`*`:college.`*`</code>。 </li></ul>                                             |
+|  remap_tablegroup_list      | 重命名表所属的表组。如果源表绑定了表组，则在恢复到目标租户创建表时，系统默认会将表恢复到目标租户中同名的表组，如果同名的表组不存在，表恢复就会失败。如果目标租户中有其他表组，可以将表恢复通过该语句恢复到其他表组中，源对象与重命名对象之间使用英文冒号（:）连接。 </br>例如，将源表组 <code>tg1</code> 中的表全部恢复到目标租户的表组 <code>newtg1</code> 中：<code>REMAP TABLEGROUP tg1:newtg1</code>。                                              |
+|  remap_tablespace_list      | 重命名表所属的表空间。表空间在 OceanBase 数据库中是一个逻辑单元，当前主要用于数据加密。如果源表绑定了表空间，则在恢复到目标租户创建表时，系统默认会将表恢复到目标租户中同名的表空间，如果同名的表空间不存在，表恢复就会失败。如果目标租户中有其他表空间，也可以将表通过该语句恢复到其他表空间中，源对象与重命名对象之间使用英文冒号（:）连接。</br> 例如，将源表空间 <code>ts1</code> 中的表全部恢复到目标租户的表空间 <code>newts1</code> 中：<code>REMAP TABLEGROUP ts1:newts1</code>。                                             |
+
 
 ## 恢复性能相关
 
