--- a/zh-CN/600.manage/600.backup-and-recovery/600.restore-data/900.views-of-the-restore.md
+++ b/zh-CN/600.manage/600.backup-and-recovery/600.restore-data/900.views-of-the-restore.md
@@ -62,3 +62,42 @@ OceanBase 数据库支持通过各视图查看恢复的进度与结果。
 | FINISH_BYTES_DISPLAY             | 完成恢复字节数，以存储容量单位显示  |
 | DESCRIPTION                      | 恢复命令里指定的 `DESCRIPTION` 信息  |
 | COMMENT                          | 恢复失败时记录失败信息  |
+
+## CDB_OB_RECVOER_TABLE_JOBS
+
+`CDB_OB_RECOVER_TABLE_JOB` 用于展示表级恢复任务记录。
+
+|  字段                            |  描述                                                                                  |
+|----------------------------------|----------------------------------------------------------------------------------------|
+| TENANT_ID                        | 任务租户的 ID                                                                           |
+| JOB_ID ||
+|||
+|||
+|||
+|||
+|||
+  
+
+## CDB_OB_RECOVER_TABLE_JOB_HISTORY
+
+## CDB_OB_IMPORT_TABLE_JOBS
+
+|  字段                            |  描述                                                                                  |
+|----------------------------------|----------------------------------------------------------------------------------------|
+| TENANT_ID                        | 任务租户的 ID                                                                           |
+|||
+|||
+|||
+
+## CDB_OB_IMPORT_TABLE_JOB_HISTORY
+
+## CDB_OB_IMPORT_TABLE_TASKS
+
+|  字段                            |  描述                                                                                  |
+|----------------------------------|----------------------------------------------------------------------------------------|
+| TENANT_ID                        | 任务租户的 ID                                                                           |
+|||
+|||
+|||
+
+## CDB_OB_IMPORT_TABLE_TASK_HISTORY
