--- a/zh-CN/400.deploy/300.deploy-oceanbase-enterprise-edition/200.preparations-before-deploy/100.prepare-servers.md
+++ b/zh-CN/400.deploy/300.deploy-oceanbase-enterprise-edition/200.preparations-before-deploy/100.prepare-servers.md
@@ -42,13 +42,18 @@
 
 ### 资源规划
 
-CPU 型号参考 : Intel(R) Xeon(R) CPU E5-2682 v4 @ 2.50GHz
+CPU 型号参考：Intel(R) Xeon(R) CPU E5-2682 v4 @ 2.50GHz
 
 仲裁服务器的资源规划参考如下规则：
 
-* 最小规格机器（2C4G）默认可支持 32 个用户租户和 `sys` 租户同时开启仲裁（2F（2 副本集群）或 4F（4 副本集群），primary_zone=RANDOM，unit_num=1）。
+* 最小规格机器（2C4G）默认可支持 32 个用户租户和 `sys` 租户同时开启仲裁（2F 或 4F，`primary_zone=RANDOM`，`unit_num=1`）。
 * 每新增 32 个单 Unit 租户（2F 或 4F，`primary_zone=RANDOM`，`unit_num=1`），仲裁服务器资源需相应地至少增加：1C1G，日志盘 2GB，网络带宽 20 Mbps。
 * 对于 `unit_num=N`（N>1）的场景，可简单地当做 N 个单 Unit 租户处理。
+
+<main id="notice" type='explain'>
+  <h4>说明</h4>
+  <p><ul><li> 2F：两副本集群。</li><li> 4F：四副本集群。</li><li> <code>primary_zone=RANDOM</code>：在指定 <code>PRIMARY_ZONE</code> 时，其值可以设置为 <code>RANDOM</code>（必须大写），表示随机选择最高优先级内的任意一个 Zone 作为 <code>Primary Zone</code>。</li><li> `unit_num=1`：资源池在目标 Zone 的 Unit 个数是 1。</li><li>单 Unit 租户：在一个 Zone 里的 Unit 个数是 1 的租户。</li></ul>  更多有关 <code>primary_zone</code> 和 <code>unit_num</code> 的信息，<a href="../../../600.manage/200.tenant-management/600.common-tenant-operations/200.manage-create-tenant.md">创建租户</a>。</p>
+</main>
 
 ### 网络延迟要求
 
