--- a/zh-CN/400.deploy/300.deploy-oceanbase-enterprise-edition/400.deploy-through-the-command-line/200.deploy-the-oceanbase-cluster-command-line/200.deploy-the-quorum-high-availability-service.md
+++ b/zh-CN/400.deploy/300.deploy-oceanbase-enterprise-edition/400.deploy-through-the-command-line/200.deploy-the-oceanbase-cluster-command-line/200.deploy-the-quorum-high-availability-service.md
@@ -445,7 +445,7 @@ obclient [(none)]> SELECT * FROM oceanbase.DBA_OB_ARBITRATION_SERVICE;
 
 ### 步骤四：为 sys 租户开启仲裁服务
 
-可以在创建租户时即为租户开启仲裁服务，新建租户时为租户开启仲裁服务的详细信息，请参见 [CREATE TENANT](../../../../700.reference/400.development-reference/100.sql-syntax/100.system-tenants/800.create-tenant.md)。
+可以在创建租户时即为租户开启仲裁服务，新建租户时为租户开启仲裁服务的详细信息，请参见 [CREATE TENANT](../../../../700.reference/500.sql-reference/100.sql-syntax/100.system-tenants/800.create-tenant.md)。
 
 如果在创建租户时未开启仲裁服务，也可以待租户创建成功后，为租户开启仲裁服务。
 
