--- a/en-US/700.reference/700.command-line-tools/900.ob-agent/300.install-and-deploy-obagent/300.use-obd-to-deploy-obagent.md
+++ b/en-US/700.reference/700.command-line-tools/900.ob-agent/300.install-and-deploy-obagent/300.use-obd-to-deploy-obagent.md
@@ -44,11 +44,11 @@ obagent:
     # The username for HTTP authentication. Default value: admin.
     http_basic_auth_user: admin
     # The password for HTTP authentication. Default value: root.
-    http_basic_auth_password: root
+    http_basic_auth_password: ******
     # The username for the debug service. Default value: admin.
     pprof_basic_auth_user: admin
     # The password for the debug service. Default value: root.
-    pprof_basic_auth_password: root
+    pprof_basic_auth_password: ******
     
     # The following configurations must be consistent with those in the OceanBase cluster configuration file.
     # The monitor username for OceanBase Database. The user must have read access to OceanBase Database as a system tenant. Default value: root.
