fix the review by gengfu

--- a/zh-CN/700.reference/200.system-management/500.manage-data-storage/200.merge-management/400.manually-trigger-a-merge.md
+++ b/zh-CN/700.reference/200.system-management/500.manage-data-storage/200.merge-management/400.manually-trigger-a-merge.md
@@ -61,6 +61,10 @@
       ```sql
       obclient> ALTER SYSTEM MAJOR FREEZE TENANT = all;
       ```
+
+     <main id="notice" type='explain'>
+     <h4>说明</h4>
+     <p>OceanBase 数据库从 V4.2.1 版本开始，<code>TENANT = all_user</code> 与 <code>TENANT = all</code>语义相同，在需要生效范围为所有用户租户时，推荐使用 <code>TENANT = all_user</code>，后续 <code>TENANT = all</code> 将废弃不再使用。</p>
    
    * 系统租户对所有 Meta 租户发起合并
 
