--- a/zh-CN/600.manage/200.tenant-management/600.common-tenant-operations/800.tenant-scale-in-and-out/300.adjust-unit-number.md
+++ b/zh-CN/600.manage/200.tenant-management/600.common-tenant-operations/800.tenant-scale-in-and-out/300.adjust-unit-number.md
@@ -47,6 +47,11 @@
      ```
 
      该语句表示所有用户租户下配置项 `enable_rebalance` 的值均为 `true`。
+  
+     <main id="notice" type='explain'>
+     <h4>说明</h4>
+     <p>OceanBase 数据库从 V4.2.1 版本开始，<code>TENANT = all_user</code> 与 <code>TENANT = all</code>语义相同，在需要生效范围为所有用户租户时，推荐使用 <code>TENANT = all_user</code>，后续 <code>TENANT = all</code> 将废弃不再使用。</p>
+     </main>
 
   * 用户租户开启本租户的租户内负载均衡
 
