--- a/zh-CN/600.manage/400.high-availability/400.arbitration-high-availability/400.modify-the-degradation-timeout.md
+++ b/zh-CN/600.manage/400.high-availability/400.arbitration-high-availability/400.modify-the-degradation-timeout.md
@@ -79,6 +79,10 @@
      ALTER SYSTEM SET arbitration_timeout = '10s' TENANT = all;
      ```
 
+     <main id="notice" type='explain'>
+     <h4>说明</h4>
+     <p>OceanBase 数据库从 V4.2.1 版本开始，<code>TENANT = all_user</code> 与 <code>TENANT = all</code>语义相同，在需要生效范围为所有用户租户时，推荐使用 <code>TENANT = all_user</code>，后续 <code>TENANT = all</code> 将废弃不再使用。</p>
+
 ## 相关文档
 
 更多仲裁服务相关的信息，请参见以下内容：
