--- a/zh-CN/600.manage/600.backup-and-recovery/300.log-archive/200.preparation-before-log-archive.md
+++ b/zh-CN/600.manage/600.backup-and-recovery/300.log-archive/200.preparation-before-log-archive.md
@@ -25,7 +25,7 @@
      ALTER SYSTEM SET log_archive_concurrency = 10 TENANT = mysql_tenant;
      ```
 
-   * `sys` 租户调整所有用户租户（不含 `sys` 租户和 Meta 租户）的日志归档速度
+   * `sys` 租户调整所有租户的日志归档速度
 
      ```sql
      ALTER SYSTEM SET log_archive_concurrency = 10 TENANT = all_user;
@@ -36,6 +36,10 @@
      ```sql
      ALTER SYSTEM SET log_archive_concurrency = 10 TENANT = all;
      ```
+
+     <main id="notice" type='explain'>
+     <h4>说明</h4>
+     <p>OceanBase 数据库从 V4.2.1 版本开始，<code>TENANT = all_user</code> 与 <code>TENANT = all</code>语义相同，在需要生效范围为所有用户租户时，推荐使用 <code>TENANT = all_user</code>，后续 <code>TENANT = all</code> 将废弃不再使用。</p>
 
    * 用户租户调整本租户的日志归档速度
 
