--- a/zh-CN/700.reference/200.system-management/500.manage-data-storage/100.dump-management/300.trigger-dump-manually.md
+++ b/zh-CN/700.reference/200.system-management/500.manage-data-storage/100.dump-management/300.trigger-dump-manually.md
@@ -13,7 +13,7 @@
       可以对指定的一个或多个租户进行转储，SQL 语句如下。
 
       ```sql
-      obclient> ALTER SYSTEM MINOR FREEZE TENANT [=] all | tenant_name [, tenant_name ...];
+      obclient> ALTER SYSTEM MINOR FREEZE TENANT [=] all_user | all | all_meta | tenant_name [, tenant_name ...];
       ```
 
       示例如下：
@@ -35,6 +35,11 @@
           ```sql
           obclient> ALTER SYSTEM MINOR FREEZE TENANT = all;
           ```
+
+          <main id="notice" type='explain'>
+          <h4>说明</h4>
+          <p>OceanBase 数据库从 V4.2.1 版本开始，<code>TENANT = all_user</code> 与 <code>TENANT = all</code>语义相同，在需要生效范围为所有用户租户时，推荐使用 <code>TENANT = all_user</code>，后续 <code>TENANT = all</code> 将废弃不再使用。</p>
+          </main>
       
       * 系统租户对所有 Meta 租户发起转储
 
