420:Upgrade directory adjustment

--- a/zh-CN/600.manage/100.cluster-management/300.common-cluster-operations/1500.oceanbase-version-upgrade/200.upgrade-oceanbase-enterprise-edition/100.oceanbase-cluster-version-upgrade/100.upgrade-overview.md
+++ b/zh-CN/600.manage/100.cluster-management/300.common-cluster-operations/1500.oceanbase-version-upgrade/200.upgrade-oceanbase-enterprise-edition/100.oceanbase-cluster-version-upgrade/100.upgrade-overview.md
@@ -24,9 +24,9 @@ OceanBase 集群升级时，需要注意以下几点：
 * 升级脚本需要系统租户直连 Root Service 执行，不能通过 OceanBase 数据库代理（OceanBase Database Proxy，简称：ODP） 连接。
 * 升级过程中可能会涉及下列参数的变化，升级前需要对这些参数进行备份：
 
-  * [server_permanent_offline_time](../../../../../700.reference/800.configuration-items-and-system-variables/100.system-configuration-items/300.cluster-level-configuration-items/19000.server_permanent_offline_time.md)
-  * [enable_rebalance](../../../../../700.reference/800.configuration-items-and-system-variables/100.system-configuration-items/400.tenant-level-configuration-items/6700.enable_rebalance.md)
-  * [enable_rereplication](../../../../../700.reference/800.configuration-items-and-system-variables/100.system-configuration-items/300.cluster-level-configuration-items/8200.enable_rereplication.md)
+  * [server_permanent_offline_time](../../../../../../700.reference/800.configuration-items-and-system-variables/100.system-configuration-items/300.cluster-level-configuration-items/19000.server_permanent_offline_time.md)
+  * [enable_rebalance](../../../../../../700.reference/800.configuration-items-and-system-variables/100.system-configuration-items/400.tenant-level-configuration-items/6700.enable_rebalance.md)
+  * [enable_rereplication](../../../../../../700.reference/800.configuration-items-and-system-variables/100.system-configuration-items/300.cluster-level-configuration-items/8200.enable_rereplication.md)
 
 ## 升级限制
 
@@ -47,7 +47,7 @@ OceanBase 集群升级时，有如下限制：
 
 <main id="notice" type='notice'>
   <h4>注意</h4>
-  <p>如果 OceanBase 集群关联了仲裁服务，那么在进行 OceanBase 集群版本升级时，需要确保先升级仲裁服务版本，然后再升级 OceanBase 集群版本。仲裁服务版本升级的详细信息，请参见 <a href="../200.arbitration-services-version-upgrade.md">仲裁服务版本升级</a>。</br>可以使用系统租户查询视图 <a href="../../../../../700.reference/700.system-views/300.system-view-of-sys-tenant/200.dictionary-view-of-sys-tenant/19600.oceanbase-dba_ob_arbitration_service-of-sys-tenant.md">oceanbase.DBA_OB_ARBITRATION_SERVICE</a> 检查本 OceanBase 集群是否关联仲裁服务。</p>
+  <p>如果 OceanBase 集群关联了仲裁服务，那么在进行 OceanBase 集群版本升级时，需要确保先升级仲裁服务版本，然后再升级 OceanBase 集群版本。仲裁服务版本升级的详细信息，请参见 <a href="../200.arbitration-services-version-upgrade.md">仲裁服务版本升级</a>。</br>可以使用系统租户查询视图 <a href="../../../../../../700.reference/700.system-views/300.system-view-of-sys-tenant/200.dictionary-view-of-sys-tenant/19600.oceanbase-dba_ob_arbitration_service-of-sys-tenant.md">oceanbase.DBA_OB_ARBITRATION_SERVICE</a> 检查本 OceanBase 集群是否关联仲裁服务。</p>
 </main>
 
 ## 升级影响
