--- a/zh-CN/600.manage/100.cluster-management/300.common-cluster-operations/1500.oceanbase-version-upgrade/200.upgrade-oceanbase-enterprise-edition/200.arbitration-services-version-upgrade.md
+++ b/zh-CN/600.manage/100.cluster-management/300.common-cluster-operations/1500.oceanbase-version-upgrade/200.upgrade-oceanbase-enterprise-edition/200.arbitration-services-version-upgrade.md
@@ -12,7 +12,7 @@
 
 <main id="notice" type='explain'>
   <h4>说明</h4>
-  <p>可以使用系统租户查询视图 <a href="../../../../700.reference/700.system-views/300.system-view-of-sys-tenant/200.dictionary-view-of-sys-tenant/19600.oceanbase-dba_ob_arbitration_service-of-sys-tenant.md">oceanbase.DBA_OB_ARBITRATION_SERVICE</a> 检查本 OceanBase 集群是否关联仲裁服务。</p>
+  <p>可以使用系统租户查询视图 <a href="../../../../../700.reference/700.system-views/300.system-view-of-sys-tenant/200.dictionary-view-of-sys-tenant/19600.oceanbase-dba_ob_arbitration_service-of-sys-tenant.md">oceanbase.DBA_OB_ARBITRATION_SERVICE</a> 检查本 OceanBase 集群是否关联仲裁服务。</p>
 </main>
 
 ## 操作步骤
