--- a/zh-CN/600.manage/100.cluster-management/300.common-cluster-operations/1500.oceanbase-version-upgrade/200.upgrade-oceanbase-enterprise-edition/100.oceanbase-cluster-version-upgrade/300.check-after-upgrade.md
+++ b/zh-CN/600.manage/100.cluster-management/300.common-cluster-operations/1500.oceanbase-version-upgrade/200.upgrade-oceanbase-enterprise-edition/100.oceanbase-cluster-version-upgrade/300.check-after-upgrade.md
@@ -6,6 +6,10 @@
 
 1. 登录 OceanBase 数据库。
 
+   **示例如下：**
+
+   使用 `root` 用户连接 `sys` 租户。
+
    ```shell
    obclient -h10.10.10.1 -P2881 -uroot@sys -p******
    ```
@@ -54,4 +58,4 @@
 
 ## 相关文档
 
-有关连接 OceanBase 数据库的详细信息，请参见 [连接方式概述](../../../../../300.develop/100.application-development-of-mysql-mode/100.connect-to-oceanbase-database-of-mysql-mode/100.connection-methods-overview-of-mysql-mode.md)。
+有关连接 OceanBase 数据库的详细信息，请参见 [连接方式概述](../../../../../../300.develop/100.application-development-of-mysql-mode/100.connect-to-oceanbase-database-of-mysql-mode/100.connection-methods-overview-of-mysql-mode.md)。
