fix aone  issue

--- a/zh-CN/700.reference/500.sql-reference/100.sql-syntax/200.common-tenant-of-mysql-mode/600.sql-statement-of-mysql-mode/5900.load-data-of-mysql-mode.md
+++ b/zh-CN/700.reference/500.sql-reference/100.sql-syntax/200.common-tenant-of-mysql-mode/600.sql-statement-of-mysql-mode/5900.load-data-of-mysql-mode.md
@@ -70,10 +70,10 @@ LOAD DATA
 
 示例 1：从外部文件导入数据。
 
-1. 设置全局安全路径。
+1. 设置全局安全路径（由于安全原因，只能使用通过本地 Unix Socket 连接的 Client 执行修改）。
 
    ```shell
-   obclient> SET GLOBAL secure_file_priv = ""
+   obclient> SET GLOBAL secure_file_priv = "/usr/sqldump"
    Query OK, 0 rows affected 
    obclinet> \q
    Bye
@@ -87,7 +87,7 @@ LOAD DATA
 2. 重连数据库后，从外部文件导入数据。
 
    ```shell
-   obclient> LOAD DATA INFILE 'test.sql' INTO TABLE t1;
+   obclient> LOAD DATA INFILE '/usr/sqldump/test.sql' INTO TABLE t1;
    Query OK, 0 rows affected 
    ```
 
