--- a/zh-CN/700.reference/1000.performance-tuning-guide/500.sql-optimization/400.sql-optimization/300.monitor-sql-execution-performance/100.gv-ob-sql-audit.md
+++ b/zh-CN/700.reference/1000.performance-tuning-guide/500.sql-optimization/400.sql-optimization/300.monitor-sql-execution-performance/100.gv-ob-sql-audit.md
@@ -91,7 +91,7 @@
 | ELAPSED_TIME            | bigint(20)          | number(38)     |接收到请求到执行结束消耗总时间       |
 | NET_TIME                | bigint(20)          | number(38)     |发送 RPC 到接收到请求时间       |
 | NET_WAIT_TIME           | bigint(20)          | number(38)     |接收到请求到进入队列时间        |
-| QUEUE_TIME              | bigint(20)          | number(38)     |请求在队列等待事件      |
+| QUEUE_TIME              | bigint(20)          | number(38)     |请求在队列等待时间      |
 | DECODE_TIME             | bigint(20)          | number(38)     |出队列后 Decode 时间      |
 | GET_PLAN_TIME           | bigint(20)          | number(38)     |开始执行到获得计划时间      |
 | EXECUTE_TIME            | bigint(20)          | number(38)     |Plan 执行消耗时间       |
