--- a/zh-CN/600.manage/1000.troubleshooting/900.backup-and-recovery/200.physical-restore-failed.md
+++ b/zh-CN/600.manage/1000.troubleshooting/900.backup-and-recovery/200.physical-restore-failed.md
@@ -324,4 +324,4 @@
         <p>如果在 <code>rootservice.log</code> 中 <code>grep</code> 不到相关日志，可能是因为 <code>rootservice.log</code> 切了文件，可以 <code>grep "ob_restore_scheduler" rootservice.log.* | grep "WARN\|ERROR"</code>。</p>
         </main>
 
-4. 搜索到日志报错信息后，联系技术支持人员协助处理。
+4. 获取到日志报错信息后，联系技术支持人员协助处理。
