--- a/zh-CN/600.manage/400.high-availability/400.arbitration-high-availability/410.view-the-upgrade-and-degradation-of-log-streams.md
+++ b/zh-CN/600.manage/400.high-availability/400.arbitration-high-availability/410.view-the-upgrade-and-degradation-of-log-streams.md
@@ -13,7 +13,7 @@
    * 查询日志流降级事件
 
         ```sql
-        SELECT * FROM oceanbase.DBA_OB_SERVER_EVENT_HISTORY WHERE event LIKE "DEGRADE";
+        SELECT * FROM oceanbase.DBA_OB_SERVER_EVENT_HISTORY WHERE event LIKE "%DEGRADE%";
         ```
 
         如果查询结果为空，则表示当前未发生日志流降级事件，否则，查询结果中会显示发生了日志流降级的副本信息。
@@ -21,7 +21,7 @@
    * 查询日志流升级事件
 
         ```sql
-        SELECT * FROM oceanbase.DBA_OB_SERVER_EVENT_HISTORY WHERE event LIKE "UPGRADE";
+        SELECT * FROM oceanbase.DBA_OB_SERVER_EVENT_HISTORY WHERE event LIKE "%UPGRADE%";
         ```
 
         如果查询结果为空，则表示当前未发生日志流升级事件，否则，查询结果中会显示发生了日志流降级的副本信息。
