--- a/zh-CN/700.reference/300.database-object-management/100.manage-object-of-mysql-mode/200.manage-tables-of-mysql-mode/600.change-table-of-mysql-mode.md
+++ b/zh-CN/700.reference/300.database-object-management/100.manage-object-of-mysql-mode/200.manage-tables-of-mysql-mode/600.change-table-of-mysql-mode.md
@@ -133,7 +133,7 @@ OceanBase 数据库支持增加列、修改列及其属性、删除列等。
 
 支持重命名列、修改列类型以及列的默认值。
 
-* 重命名列。
+* 重命名列
 
   使用 `RENAME COLUMN` 关键字重命名列时，需要注意以下事项：
 
@@ -144,16 +144,6 @@ OceanBase 数据库支持增加列、修改列及其属性、删除列等。
   * 不支持同时进行重命名列和删除列的操作。
 
   * 不支持同时进行重命名列与修改分区（增加分区、删除分区等）的操作。
-
-  此外，以下场景下，重命名列会失败：
-
-  * 目标列名在当前表中已存在
-
-  * 待重命名的列被生成列表达式引用
-
-  * 待重命名的列被分区表达式引用
-
-  * 待重命名的列被 CHECK 约束引用
 
   假设有一表 `test`，其表结构如下所示。
 
@@ -185,7 +175,19 @@ OceanBase 数据库支持增加列、修改列及其属性、删除列等。
   2 rows in set
   ```
 
-* 修改列类型。
+  注意，以下场景下，重命名列会失败：
+
+  * 目标列名在当前表中已存在
+
+    有一个特殊场景，如果重命名的列出现了循环的场景，可以重命名成功。例如，本示例中，将原 `c1` 列重命名为 `c2`,同时将原 `c2` 列重命名为 `c1`，执行语句 `ALTER TABLE test RENAME COLUMN c1 TO c2, rename column c2 TO c1;`，可以重命名成功。
+
+  * 待重命名的列被生成列表达式引用
+
+  * 待重命名的列被分区表达式引用
+
+  * 待重命名的列被 CHECK 约束引用
+
+* 修改列类型
 
   OceanBase 数据库中 MySQL 模式下列类型的转换规则及详细信息请参见 [列类型变更规则](../../../500.sql-reference/100.sql-syntax/200.common-tenant-of-mysql-mode/700.ddl-function-of-mysql-mode/900.column-type-change-rule-of-mysql-mode.md)。
 
@@ -219,7 +221,7 @@ OceanBase 数据库支持增加列、修改列及其属性、删除列等。
   2 rows in set
   ```
 
-* 修改列名同时修改列类型。
+* 修改列名同时修改列类型
 
   假设有一表 `test`，其表结构如下所示。
 
