--- a/zh-CN/700.reference/500.sql-reference/300.pl-reference/300.pl-oracle/700.stored-procedure-and-functions-oracle/900.pl-databaselink.md
+++ b/zh-CN/700.reference/500.sql-reference/300.pl-reference/300.pl-oracle/700.stored-procedure-and-functions-oracle/900.pl-databaselink.md
@@ -29,7 +29,7 @@ DELIMITER /
 DECLARE 
     v1 VARCHAR2(10);
 BEGIN
-    p1@dblink(1, v1);
+    proc3@dblink(1, v1);
 END;
 /
 ```
@@ -65,7 +65,7 @@ CREATE OR REPLACE PACKAGE pkg1 AS
     TYPE ty4 IS TABLE OF VARCHAR2(10) INDEX BY PLS_INTEGER;
     TYPE ty5 IS TABLE OF ty1 INDEX BY PLS_INTEGER;
     TYPE ty6 IS TABLE OF VARCHAR2(10);
-    PROCEDURE p1(param1 ty1, param2 ty2, param3 ty3 , param4 ty4, param5 ty5);
+    PROCEDURE proc4(param1 ty1, param2 ty2, param3 ty3 , param4 ty4, param5 ty5);
 END;
 /
 
@@ -77,11 +77,11 @@ DECLARE
     v4 pkg1.ty4@dblink_test;
     v4 pkg1.ty5@dblink_test;
 BEGIN
-    pkg1.p1@dblink_test(v1, v2, v3, v4, v5);
+    pkg1.proc4@dblink_test(v1, v2, v3, v4, v5);
 END;
 /
 
-/* ty6 没有出现在 pkg1 内部 PROCEDURE p1 的参数列表中，不支持远程调用 */ 
+/* 由于 ty6 没有出现在 pkg1 内部过程 proc4 的参数列表中，所以不支持远程调用 */ 
 
 DECLARE
     v1 pkg1.ty6@dblink_test;
@@ -90,30 +90,27 @@ BEGIN
 END;
 ```
 
+OceanBase 数据库还支持调用远端 PL 存储过程和程序包的同义词，以及在本地创建远端 PL 对象的同义词。
 
-OceanBase 数据库支持调用远端Oracle内部的procedure、package的同义词，和本地创建的远端对象的同义词。
-C++
-解释代码
-复制代码
-1
-2
-3
-4
-5
-6
-7
-8
-9
-10
-11
--- 远程procedure p1
--- 远程同义词
-create or replace synonym syn_remote_p1 for p1;
+```shell
+/* 创建远端 PL 存储过程 proc5 的同义词 */
+CREATE OR REPLACE SYNONYM syn_remote_p1 FOR proc5;
 
 
--- 本地同义词
-create or replace synonym syn_local_p1 for p1@oci_link;
+/* 在本地创建远端 PL 存储过程 proc6 同义词
+CREATE OR REPLACE SYNONYM syn_local_p1 FOR proc6@oci_link;
+```
 
-call p1@dblink(1);
-call syn_remote_p1@dblink(1);
-call syn_local_p1(1);
+用户可以通过以下示例中的命令调用远端 PL 存储过程。
+
+```shell
+CALL proc5@dblink_test(1);
+CALL syn_remote_p1@dblink_test(1);
+CALL syn_local_p1(1);
+```
+
+## 相关文档
+
+[CREATE DATABASE LINK 语法](../../../100.sql-syntax/300.common-tenant-of-oracle-mode/900.sql-statement-of-oracle-mode/100.ddl-of-oracle-mode/1500.create-database-link-of-oracle-mode.md)
+[DROP DATABASE LINK 语法](../../../100.sql-syntax/300.common-tenant-of-oracle-mode/900.sql-statement-of-oracle-mode/100.ddl-of-oracle-mode/3000.drop-database-link-of-oracle-mode.md)
+[通过 DBLink 访问远端数据库中的数据](../../../../300.database-object-management/200.manage-object-of-oracle-mode/1000.manage-dblink-of-oracle-mode/300.access-a-remote-database-by-a-dblink-of-oracle-mode.md)
