--- a/zh-CN/700.reference/500.sql-reference/300.pl-reference/300.pl-oracle/700.stored-procedure-and-functions-oracle/900.pl-databaselink.md
+++ b/zh-CN/700.reference/500.sql-reference/300.pl-reference/300.pl-oracle/700.stored-procedure-and-functions-oracle/900.pl-databaselink.md
@@ -1,6 +1,6 @@
 # PL Database Link
 
-OceanBase 数据库支持远程调用 PL 存储过程。目前仅支持调用 Standalone Procedure 和 PL 系统包中的 Procedure，暂时不支持 UDF 和 PL 系统包中 Function 的远程调用。
+OceanBase 数据库支持远程调用 PL 存储过程 Procedure。目前仅支持调用 Standalone Procedure 和 PL 系统包中的 Procedure，暂时不支持 UDF 和 PL 系统包中 Function 的远程调用。
 
 OceanBase 数据库远程调用 PL 存储过程的语法如下：
 
@@ -33,7 +33,6 @@ BEGIN
 END;
 /
 ```
-
 
 在 PL 块中还可以调用远程 dblink 中 PL 程序包中定义的数据类型。语法如下：
 
@@ -81,7 +80,7 @@ BEGIN
 END;
 /
 
-/* 由于 ty6 没有出现在 pkg1 内部过程 proc4 的参数列表中，所以不支持远程调用 */ 
+/* 由于 ty6 没有出现在 pkg1 内部过程 proc4 的参数列表中，所以不支持如下场景的远程调用 */ 
 
 DECLARE
     v1 pkg1.ty6@dblink_test;
