--- a/zh-CN/700.reference/500.sql-reference/300.pl-reference/300.pl-oracle/700.stored-procedure-and-functions-oracle/900.pl-databaselink.md
+++ b/zh-CN/700.reference/500.sql-reference/300.pl-reference/300.pl-oracle/700.stored-procedure-and-functions-oracle/900.pl-databaselink.md
@@ -1,17 +1,16 @@
 # PL Database Link
 
-OceanBase 数据库支持远程调用 PL 存储过程 Procedure。目前仅支持调用 Standalone Procedure 和 PL 系统包中的 Procedure，暂时不支持 UDF 和 PL 系统包中 Function 的远程调用。
+OceanBase 数据库支持远程调用 PL 存储过程 Procedure。目前仅支持调用 Standalone Procedure 和 PL 程序包中的 Procedure，暂时不支持 UDF 和 PL 程序包中 Function 的远程调用。
 
 OceanBase 数据库远程调用 PL 存储过程的语法如下：
 
 ```sql
-CALL sp_name[@dblink_name]([parameter[,...]])
-CALL sp_name[@dblink_name][()]
+CALL [pakage_name.]sp_name@dblink_name([parameter[,...]])
 ```
 
-上述语法中，`sp_name` 表示所调用的存储过程名称；`@dblink_name` 指定 dblink 名称，表示调用的 `sp_name` 是一个远程的存储过程。
+上述语法中，`sp_name` 表示所调用的存储过程名称；`@dblink_name` 指定 dblink 名称，表示调用的 `sp_name` 是一个远程的存储过程；`pakage_name.` PL 程序包名称。
 
-如下示例为调用远程 `dblink_test` 的 `proc1` (Standalone Procedure)和 PL 系统包 `pl_pkg1` 中的过程 `proc2`。
+如下示例为调用远程 `dblink_test` 的 `proc1` (Standalone Procedure)和 PL 程序包 `pl_pkg1` 中的过程 `proc2`。
 
 ```shell
 CALL proc1@dblink_test(1);
@@ -50,10 +49,10 @@ END;
 
 需要注意的是，程序包中定义的数据类型必须是出现在程序包中 `FUNCTION` 或 `PROCEDURE` 参数定义的类型。如果只在程序包中定义，但是没有在程序包中任何 `FUNCTION` 或 `PROCEDURE` 的参数中使用，则不支持远程调用。
 
-如下示例为在远程定义函数包 `pkg1` 及其数据类型，并远程调用该程序包中定义的数据类型。
+如下示例为在远程定义程序包 `pkg1` 及其数据类型，并远程调用该程序包中定义的数据类型。
 
 ```shell
-/* 在远程定义函数包 pkg1 */
+/* 在远程定义程序包 pkg1 */
 
 DELIMITER /
 
