--- a/zh-CN/700.reference/500.sql-reference/100.sql-syntax/100.system-tenants/200.alter-system/1300.merge.md
+++ b/zh-CN/700.reference/500.sql-reference/100.sql-syntax/100.system-tenants/200.alter-system/1300.merge.md
@@ -34,10 +34,10 @@ server_list:
 
 |          **参数**         |      **描述**      |
 |---------------------------|------------------|
-| MAJOR FREEZE              | 发起每日合并。<br>使用 `TENANT=ALL` 或者 `TENANT=all_user` 可以合并所有用户租户（不包括系统租户和 Meta 租户），使用 `TENANT=all_meta` 可以合并所有 Meta 租户；也可以使用 `TENANT=tenant_name [, tenant_name ...]` 仅合并指定租户。</br>       |
+| MAJOR FREEZE              | 发起每日合并。<br>使用 `TENANT=ALL` 或者 `TENANT=all_user` 可以合并所有用户租户（不包括系统租户和 Meta 租户），建议用户使用 `all_user`，`ALL` 会在未来废除；使用 `TENANT=all_meta` 可以合并所有 Meta 租户；也可以使用 `TENANT=tenant_name [, tenant_name ...]` 仅合并指定租户。</br>       |
 | MINOR FREEZE              | 发起转储。            |
-| {SUSPEND \| RESUME} MERGE | 暂停或恢复每日合并。<br>使用 `TENANT=ALL` 或者 `TENANT=all_user` 可以暂停或恢复所有租户（不包括系统租户和 Meta 租户）的每日合并，使用 `TENANT=all_meta` 可以暂停或恢复所有 Meta 租户；也可以使用 `TENANT=tenant_name [, tenant_name ...]` 仅暂停或恢复指定租户的每日合并。 </br>      |
-| CLEAR MERGE ERROR         | 清理合并出错的标记。<br>使用 `TENANT=ALL` 或者 `TENANT=all_user` 可以清理合并所有租户（不包括系统租户和 Meta 租户）的出错标记，使用 `TENANT=all_meta` 可以清理合并所有 Meta 租户；也可以使用 `TENANT=tenant_name [, tenant_name ...]` 仅清理合并指定租户的出错标记。</br>       |
+| {SUSPEND \| RESUME} MERGE | 暂停或恢复每日合并。<br>使用 `TENANT=ALL` 或者 `TENANT=all_user` 可以暂停或恢复所有租户（不包括系统租户和 Meta 租户）的每日合并，建议用户使用 `all_user`，`ALL` 会在未来废除；使用 `TENANT=all_meta` 可以暂停或恢复所有 Meta 租户；也可以使用 `TENANT=tenant_name [, tenant_name ...]` 仅暂停或恢复指定租户的每日合并。 </br>      |
+| CLEAR MERGE ERROR         | 清理合并出错的标记。<br>使用 `TENANT=ALL` 或者 `TENANT=all_user` 可以清理合并所有租户（不包括系统租户和 Meta 租户）的出错标记，建议用户使用 `all_user`，`ALL` 会在未来废除；使用 `TENANT=all_meta` 可以清理合并所有 Meta 租户；也可以使用 `TENANT=tenant_name [, tenant_name ...]` 仅清理合并指定租户的出错标记。</br>       |
 | tenant_name               | 指定租户转储。          |
 | TABLET_ID              | 指定分区转储。          |
 | SERVER                    | 指定服务器转储。          |
@@ -56,7 +56,7 @@ server_list:
 * 发起所有用户租户（不包括系统租户和 Meta 租户）的合并。
 
   ```sql
-  obclient> ALTER SYSTEM MAJOR FREEZE TENANT = ALL;
+  obclient> ALTER SYSTEM MAJOR FREEZE TENANT = all_user;
   Query OK, 0 rows affected
   ```
 
@@ -84,13 +84,6 @@ server_list:
   ```
 
 * 发起所有用户租户（不包括系统租户和 Meta 租户）的转储。
-
-  ```sql
-  obclient> ALTER SYSTEM MINOR FREEZE TENANT = ALL;
-  Query OK, 0 rows affected
-  ```
-  
-  或者
 
   ```sql
   obclient> ALTER SYSTEM MINOR FREEZE TENANT = all_user;
@@ -131,13 +124,6 @@ server_list:
 * 暂停所有用户租户（不包括系统租户和 Meta 租户）的每日合并。
 
   ```sql
-  obclient> ALTER SYSTEM SUSPEND MERGE TENANT = ALL;
-  Query OK, 0 rows affected
-  ```
-  
-  或者
-
-  ```sql
   obclient> ALTER SYSTEM SUSPEND MERGE TENANT = all_user;
   Query OK, 0 rows affected
   ```
@@ -157,13 +143,6 @@ server_list:
   ```
 
 * 恢复所有用户租户（不包括系统租户和 Meta 租户）的每日合并。
-
-  ```sql
-  obclient> ALTER SYSTEM RESUME MERGE TENANT = ALL;
-  Query OK, 0 rows affected
-  ```
-  
-  或者
 
   ```sql
   obclient> ALTER SYSTEM RESUME MERGE TENANT = all_user;
@@ -187,13 +166,6 @@ server_list:
 ### 清理合并出错标记的示例
 
 * 清理合并所有用户租户（不包括系统租户和 Meta 租户）的出错标记。
-
-  ```sql
-  obclient> ALTER SYSTEM CLEAR MERGE ERROR TENANT = ALL;
-  Query OK, 0 rows affected
-  ```
-
-  或者
 
   ```sql
   obclient> ALTER SYSTEM CLEAR MERGE ERROR TENANT = all_user;
